# AxumSendImageWithJson

back/: Cargo.toml
back/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
