[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="*", features=["json", "multipart"] }
image = "*"
tokio = { version="*", features=["full"] }
serde = { version="*", features=["derive"] }
serde_json = "*"
tower-http = { version = "0.4.0", features = ["cors", "limit"] }
